2010-10-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/lmer-1.R (.unsafe.BLAS): allow to set  identical <- all.equal
	for some tests {mainly for Mac OSX i386}

2010-06-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Date, Version): 0.999375-34

	* R/lmer.R (glmer_finalize): for a glmer(), allow q == n

	* tests/lmer-1.R (rPoisGLMMi): test example, originating from Ben Bolker

2009-09-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Depends): 0.999375-32; needs latest version of Matrix

	* src/init.c (lme4_R_cholmod_error): now using own CHOLMOD error
	handler, which does reset the 'Common' "as to start".

	* tests/lmer-1.R: re-activate first part of mcmcsamp() examples.

2009-06-02  Douglas Bates <bates@stat.wisc.edu>

	* [r318] R/lmer.R: Duh! Forgot the meaning of "stopifnot" and did not
	  reverse the condition.  Now fixed.
	* [r316] DESCRIPTION: New release
	* [r315] R/lmer.R: More informative error message for lmer_finalize.
	  Also check this condition in glmer_finalize.
	* [r314] src/lmer.c: Suppress check on q > n in update_u.

2009-05-20  Douglas Bates <bates@stat.wisc.edu>

	* [r312] DESCRIPTION: New release; allow earlier version of Matrix
	  released with R-2.9.0
	* [r311] R/lmer.R: Force copy of fitted model passed to mcmcsamp
	* [r310] man/refit.Rd: Add alias for mer,matrix method

2009-05-12  Douglas Bates <bates@stat.wisc.edu>

	* [r309] tests/nlmer.Rout.save: Slight difference in calculated results
	* [r307] DESCRIPTION, src/lmer.c: Avoid alloca for arrays of size q (C
	  stack overflows); New release

2009-04-28  Douglas Bates <bates@stat.wisc.edu>

	* [r305] R/lmer.R: Refit method for matrix response, contributed
 	  by Ben Bolker

2009-03-24  Douglas Bates <bates@stat.wisc.edu>

	* [r302] DESCRIPTION, man/Penicillin.Rd, src/lmer.c, tests/lmer-1.R,
	  tests/lmer-1.Rout.save: Handle previously ignored offset specification
	  in LMMs; add tests; new version